// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`engine regression — OPTIMIZED rateio (client-facing case) > Belo Alimentos 1`] = `
{
  "bancoResidualKWh": 496839,
  "baselineSEM": 2697793,
  "economiaLiquida": 6193,
  "economiaPct": 0.23,
  "months": 24,
  "valorTotal": 254612,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > COPEL demo 1`] = `
{
  "bancoResidualKWh": 1069142,
  "baselineSEM": 1679588,
  "economiaLiquida": -268108,
  "economiaPct": -15.96,
  "months": 15,
  "valorTotal": 266463,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > COPEL demo 2 1`] = `
{
  "bancoResidualKWh": 0,
  "baselineSEM": 4301325,
  "economiaLiquida": 347164,
  "economiaPct": 8.07,
  "months": 30,
  "valorTotal": 347164,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > COPEL demo 3 1`] = `
{
  "bancoResidualKWh": 2010412,
  "baselineSEM": 5200778,
  "economiaLiquida": -407382,
  "economiaPct": -7.83,
  "months": 24,
  "valorTotal": 597824,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > COPEL demo 4 (proposta) 1`] = `
{
  "bancoResidualKWh": 0,
  "baselineSEM": 5720856,
  "economiaLiquida": 1152332,
  "economiaPct": 20.14,
  "months": 24,
  "valorTotal": 1152332,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > Copasul (sample) 1`] = `
{
  "bancoResidualKWh": 1351512,
  "baselineSEM": 2835306,
  "economiaLiquida": 748381,
  "economiaPct": 26.4,
  "months": 24,
  "valorTotal": 1107695,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > SUPERFRIO CWBII (ACL) 1`] = `
{
  "bancoResidualKWh": 0,
  "baselineSEM": 4100522,
  "economiaLiquida": 76622,
  "economiaPct": 1.87,
  "months": 24,
  "valorTotal": 76622,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > SUPERFRIO PR 5 anos 1`] = `
{
  "bancoResidualKWh": 53026,
  "baselineSEM": 33626525,
  "economiaLiquida": 1171391,
  "economiaPct": 3.48,
  "months": 60,
  "valorTotal": 1195253,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > SUPERFRIO PR frontload 1`] = `
{
  "bancoResidualKWh": 91062,
  "baselineSEM": 11781138,
  "economiaLiquida": 1003371,
  "economiaPct": 8.52,
  "months": 24,
  "valorTotal": 1044349,
}
`;

exports[`engine regression — OPTIMIZED rateio (client-facing case) > SUPERFRIO PR portfolio 1`] = `
{
  "bancoResidualKWh": 68676,
  "baselineSEM": 11781138,
  "economiaLiquida": 525047,
  "economiaPct": 4.46,
  "months": 24,
  "valorTotal": 555951,
}
`;

exports[`engine regression — real demo cases > Belo Alimentos 1`] = `
{
  "bancoResidualKWh": 604278,
  "baselineSEM": 2697793,
  "economiaLiquida": -86790,
  "economiaPct": -3.22,
  "months": 24,
  "totalGeneration": 4699862,
  "valorTotal": 215349,
}
`;

exports[`engine regression — real demo cases > COPEL demo 1`] = `
{
  "bancoResidualKWh": 1069142,
  "baselineSEM": 1679588,
  "economiaLiquida": -268108,
  "economiaPct": -15.96,
  "months": 15,
  "totalGeneration": 2955598,
  "valorTotal": 266463,
}
`;

exports[`engine regression — real demo cases > COPEL demo 2 1`] = `
{
  "bancoResidualKWh": 0,
  "baselineSEM": 4301325,
  "economiaLiquida": 347164,
  "economiaPct": 8.07,
  "months": 30,
  "totalGeneration": 3070399,
  "valorTotal": 347164,
}
`;

exports[`engine regression — real demo cases > COPEL demo 3 1`] = `
{
  "bancoResidualKWh": 2010412,
  "baselineSEM": 5200778,
  "economiaLiquida": -407382,
  "economiaPct": -7.83,
  "months": 24,
  "totalGeneration": 9606764,
  "valorTotal": 597824,
}
`;

exports[`engine regression — real demo cases > COPEL demo 4 (proposta) 1`] = `
{
  "bancoResidualKWh": 0,
  "baselineSEM": 5720856,
  "economiaLiquida": 1152332,
  "economiaPct": 20.14,
  "months": 24,
  "totalGeneration": 6980084,
  "valorTotal": 1152332,
}
`;

exports[`engine regression — real demo cases > Copasul (sample) 1`] = `
{
  "bancoResidualKWh": 2640329,
  "baselineSEM": 2835503,
  "economiaLiquida": -364129,
  "economiaPct": -12.84,
  "months": 24,
  "totalGeneration": 3366888,
  "valorTotal": 566149,
}
`;

exports[`engine regression — real demo cases > SUPERFRIO CWBII (ACL) 1`] = `
{
  "bancoResidualKWh": 0,
  "baselineSEM": 4100522,
  "economiaLiquida": 76622,
  "economiaPct": 1.87,
  "months": 24,
  "totalGeneration": 5625682,
  "valorTotal": 76622,
}
`;

exports[`engine regression — real demo cases > SUPERFRIO PR 5 anos 1`] = `
{
  "bancoResidualKWh": 6805664,
  "baselineSEM": 33626525,
  "economiaLiquida": -7575454,
  "economiaPct": -22.53,
  "months": 60,
  "totalGeneration": 35576686,
  "valorTotal": -4512905,
}
`;

exports[`engine regression — real demo cases > SUPERFRIO PR frontload 1`] = `
{
  "bancoResidualKWh": 3712325,
  "baselineSEM": 11781138,
  "economiaLiquida": -1954727,
  "economiaPct": -16.59,
  "months": 24,
  "totalGeneration": 16705823,
  "valorTotal": -284181,
}
`;

exports[`engine regression — real demo cases > SUPERFRIO PR portfolio 1`] = `
{
  "bancoResidualKWh": 2765102,
  "baselineSEM": 11781138,
  "economiaLiquida": -1806481,
  "economiaPct": -15.33,
  "months": 24,
  "totalGeneration": 14337764,
  "valorTotal": -562186,
}
`;
